--- a/CursoMicroservicios_tarea2/docker-compose.yml
+++ b/CursoMicroservicios_tarea2/docker-compose.yml
@@ -1,77 +1,76 @@
 version: '3'
+
 services:
   db:
     image: mysql:5.7
     networks: 
       - back-net
     environment:
-      MYSQL_DATABASE: 'users_database'
-      # So you don't have to use root, but you can if you like
-      MYSQL_USER: ${MYSQL_USER}
       # Password for root access
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: users_database
+      # So you don't have to use root, but you can if you like
+      MYSQL_USER: ${MYSQL_USER}
+      # You can use whatever password you like
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      
     ports:
-      # <Port exposed> : < MySQL Port running inside container>
-      - '3306:3306'
+      - "3306:3306"
     expose:
       # Opens port 3306 on the container
-      - '3306'
+      - "3306"
       # Where our data will be persisted
     volumes:
       - my-db:/var/lib/mysql
 
   backend:
-      build: ./springboot2-jpa-crud-example
-      ports:      
-        - "8080:8080"
-      depends_on:
-        - db
-      networks: 
-        - back-net
-        - front-net
-      deploy:  
-        resources:  
-          limits:
-            cpus: '1'
-            memory: 128M
-          reservations:
-            cpus: '0.25'
-            memory: 50M
+    build: ./springboot2-jpa-crud-example
+    expose:      
+      - "8080"
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+    networks: 
+      - back-net
+      - front-net
+    environment:
+      - DATABASE_HOST=db
+      - DATABASE_USER=${MYSQL_USER}
+      - DATABASE_PASSWORD=${MYSQL_PASSWORD}
+      - DATABASE_NAME=users_database
+      - DATABASE_PORT=3306
+    deploy:  
+      resources:  
+        limits:
+          cpus: '1'
+          memory: 128M
+        reservations:
+          cpus: '0.25'
+          memory: 50M
 
   frontend:
-      build: ./angular8-springboot-client
-      ports:      
-        - "4200:4200"
-      depends_on:
-        - db
-        - backend
-      networks:
-        - front-net
-  
-  # nginx:
-  #     image: nginx:latest
-  #     container_name: reverse_proxy
-  #     volumes:
-  #       - ./nginx.conf:/etc/nginx/nginx.conf
-  #     ports:
-  #       - "4000:4000"
-  #     networks:
-  #       - front-net
-  #     links:
-  #       - frontend
-  #       - backend
+    build: ./angular8-springboot-client
+    expose:      
+      - "4200"
+    ports:
+      - "4200:4200"
+    depends_on:
+      - db
+      - backend
+    networks:
+      - front-net
 
-  loadbalancer:
-      build: ./load-balancer
-      tty: true
-      ports:
-          - '8181:8181'
-      networks:
-        - front-net
-      links:
-        - frontend
-        - backend
 
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    links:
+      - backend 
+    ports:
+      - "4000:4000"
+    
 # Names our volume
 volumes:
   my-db:
