--- a/CursoMicroservicios_tarea2/springboot2-jpa-crud-example/src/main/resources/application.properties
+++ b/CursoMicroservicios_tarea2/springboot2-jpa-crud-example/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://db:3306/users_database?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.url=jdbc:mysql://db:${DATABASE_PORT}/${DATABASE_NAME}?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password = ${DATABASE_PASSWORD}
 
 
 ## Hibernate Properties
