--- a/CursoMicroservicios_tarea2/docker-compose.yml
+++ b/CursoMicroservicios_tarea2/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.3'
 
 services:
   db:
@@ -66,10 +66,13 @@ services:
     image: nginx:latest
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    links:
+    depends_on:
       - backend 
     ports:
-      - "4000:4000"
+      - "8181:8181"
+      - "4141:4141"
+    networks:
+      - front-net
     
 # Names our volume
 volumes:
