--- a/CursoMicroservicios_tarea2/nginx.conf
+++ b/CursoMicroservicios_tarea2/nginx.conf
@@ -1,9 +1,42 @@
-upstream backend {
-    server backend:8080;
-}
-
-server {
-    location / {
-        proxy_pass http://backend;
+worker_processes 1;
+ 
+events { worker_connections 1024; }
+ 
+http {
+ 
+    sendfile on;
+ 
+    upstream docker-backend {
+        server backend:8080;
+    }
+ 
+    upstream docker-frontend {
+        server frontend:4200;
+    }
+ 
+    server {
+        listen 8181;
+ 
+        location / {
+            proxy_pass         http://docker-backend;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+    }
+ 
+    server {
+        listen 4141;
+ 
+        location / {
+            proxy_pass         http://docker-frontend;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
     }
 }
