--- a/CursoMicroservicios_tarea2/nginx.conf
+++ b/CursoMicroservicios_tarea2/nginx.conf
@@ -1,42 +1,21 @@
-worker_processes 1;
- 
-events { worker_connections 1024; }
- 
+
+events {
+  worker_connections  1024;
+}
+
 http {
- 
-    sendfile on;
- 
-    upstream docker-backend {
-        server backend:8080;
+
+ upstream localhost {
+    # These are references to our backend containers, facilitated by
+    # Compose, as defined in docker-compose.yml   
+    server backend:8080;
+ }
+ server {
+    listen 4000;
+    server_name localhost;
+    location / {
+       proxy_pass http://localhost;
+       proxy_set_header Host $host;
     }
- 
-    upstream docker-frontend {
-        server frontend:4200;
-    }
- 
-    server {
-        listen 8181;
- 
-        location / {
-            proxy_pass         http://docker-backend;
-            proxy_redirect     off;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
-        }
-    }
- 
-    server {
-        listen 4141;
- 
-        location / {
-            proxy_pass         http://docker-frontend;
-            proxy_redirect     off;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
-        }
-    }
+  }
 }
