--- a/CursoMicroservicios_tarea2/load-balancer/nginx.conf
+++ b/CursoMicroservicios_tarea2/load-balancer/nginx.conf
@@ -1,22 +1,4 @@
-# events { worker_connections 1024; }
-# http {
- 
-#  upstream localhost {
-#     # These are references to our backend containers, facilitated by
-#     # Compose, as defined in docker-compose.yml   
-#     server backend:8080;
-#  }
-#  server {
-#     listen 9090;
-#     server_name localhost;
-#     location / {
-#        proxy_pass http://localhost;
-#        proxy_set_header Host $host;
-#     }
-#   }
-# }
-
-events { worker_connections 1024; }
+events { worker_connections 4096; }
 http {
  
  upstream docker-backend {
@@ -39,8 +21,11 @@ http {
     server frontend:4200;
  }
  server {
+    # listen 443 ssl;
     listen 9191;
-    server_name docker-frontend;
+    server_name taller2;
+    # ssl_certificate     /etc/nginx/taller2.crt;
+    # ssl_certificate_key /etc/nginx/taller2.key;
     location / {
        proxy_pass http://docker-frontend;
        proxy_set_header Host $host;
