--- a/CursoMicroservicios_tarea2/load-balancer/Dockerfile
+++ b/CursoMicroservicios_tarea2/load-balancer/Dockerfile
@@ -3,9 +3,8 @@ FROM nginx:latest
 # Copy the configuration file from the current directory and paste 
 # it inside the container to use it as Nginx's default config.
 COPY nginx.conf /etc/nginx/nginx.conf
-# Port 8080 of the container will be exposed and then mapped to port
-# 8080 of our host machine via Compose. This way we'll be able to 
-# access the server via localhost:8080 on our host.
+COPY ./cert/localhost.crt /etc/nginx/localhost.crt
+COPY ./cert/localhost.key /etc/nginx/localhost.key
 EXPOSE 9090
 
 # Start Nginx when the container has provisioned.
