--- a/CursoMicroservicios_tarea2/load-balancer/nginx.conf
+++ b/CursoMicroservicios_tarea2/load-balancer/nginx.conf
@@ -21,11 +21,11 @@ http {
     server frontend:4200;
  }
  server {
-    # listen 443 ssl;
-    listen 9191;
-    server_name taller2;
-    # ssl_certificate     /etc/nginx/taller2.crt;
-    # ssl_certificate_key /etc/nginx/taller2.key;
+    listen 80;
+    listen 443 ssl;
+    server_name localhost;
+    ssl_certificate     /etc/nginx/localhost.crt;
+    ssl_certificate_key /etc/nginx/localhost.key;
     location / {
        proxy_pass http://docker-frontend;
        proxy_set_header Host $host;
