Microservicios Docker Tarea 2

--- a/CursoMicroservicios_tarea2/angular8-springboot-client/Dockerfile
+++ b/CursoMicroservicios_tarea2/angular8-springboot-client/Dockerfile
@@ -1,17 +1,7 @@
-# FROM node:12.2.0-alpine as builder
-# RUN mkdir -p /usr/src/app
-# WORKDIR /usr/src/app
-# COPY package.json /usr/src/app
-# RUN npm cache verify
-# RUN npm install
-# COPY . /usr/src/app
-# EXPOSE 4200
-# CMD ["npm","start"]
-
 FROM node:12.2.0-alpine as builder
 # set working directory
 WORKDIR /app
-# add `/app/node_modules/.bin` to $PATH
+# Env variable app path
 ENV PATH /app/node_modules/.bin:$PATH
 # install and cache app dependencies
 COPY package.json /app/package.json
