--- a/CursoMicroservicios_tarea2/springboot2-jpa-crud-example/Dockerfile
+++ b/CursoMicroservicios_tarea2/springboot2-jpa-crud-example/Dockerfile
@@ -2,7 +2,9 @@
 FROM maven:3-jdk-11 as builder
 # create app folder for sources
 RUN mkdir -p /build
+# Define the work dir
 WORKDIR /build
+# Copy the pom file to build path
 COPY pom.xml /build
 #Copy source code
 COPY src /build/src
@@ -11,7 +13,6 @@ RUN mvn package
 
 
 FROM openjdk:11-slim as runtime
-EXPOSE 8080
 #Set app home folder
 ENV APP_HOME /app
 #Create base app folder
@@ -19,4 +20,5 @@ RUN mkdir $APP_HOME
 WORKDIR $APP_HOME
 #Copy executable jar file from the builder image
 COPY --from=builder /build/target/*.jar app.jar
+# Define the command to run the app
 ENTRYPOINT ["java","-jar","/app/app.jar"]
