--- a/CursoMicroservicios_tarea2/angular8-springboot-client/package.json
+++ b/CursoMicroservicios_tarea2/angular8-springboot-client/package.json
@@ -25,10 +25,6 @@
     "tslib": "^1.9.0",
     "zone.js": "^0.9.1"
   },
-
-
-
-
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
     "@angular/cli": "~8.0.1",
@@ -48,6 +44,9 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.4.3",
+    "lodash": "~4.17.13",
+    "mixin-deep": ">=1.3.2",
+    "set-value": ">=2.0.1"
   }
 }
